# Grass-Rendering

./: CMakeLists.txt  README.md  main.cpp
application/: Application.cpp  Application.h  CMakeLists.txt  assimpInstanceLoader.cpp
application/camera/: orthographicCamera.cpp  orthographicCamera.h  perspectiveCamera.h
assets/shaders/: grassInstance.frag  grassInstance.vert  phong.frag  phongEnv.frag  phongInstance.frag  phongInstance.vert  phongOpacityMask.frag  screen.frag  white.frag
glframework/: geometry.cpp  geometry.h  object.cpp  object.h  shader.cpp  shader.h  texture.cpp  texture.h
glframework/framebuffer/: framebuffer.cpp  framebuffer.h
glframework/light/: directionalLight.cpp  directionalLight.h  light.h  pointLight.cpp  pointLight.h  spotLight.h
glframework/material/: depthMaterial.cpp  depthMaterial.h  grassInstanceMaterial.cpp  grassInstanceMaterial.h  material.h  opacityMaskMaterial.cpp  opacityMaskMaterial.h  phongEnvMaterial.cpp  phongEnvMaterial.h  phongInstanceMaterial.cpp  phongInstanceMaterial.h  phongMaterial.cpp  phongMaterial.h  screenMaterial.h  whiteMaterial.cpp  whiteMaterial.h
glframework/renderer/: renderer.cpp  renderer.h
glframework/tools/: tools.cpp  tools.h
